gpu impl merged